@@ -20,4 +20,5 @@ Changes in version 1.1.x
 Changes in version 1.3.x 
 + name change: testForExperimentCrossCorrelation to testExperimentCrossCorrelation
 + getExperimentCrossCorrelation: Filtering disabled by default, option to suppress warnings
-+ bugfix: taxonomyTree gave error when taxa were agglomerated at highest level (taxa name mismatch)
++ bugfix: taxonomyTree gave error if taxa were agglomerated at highest level (taxa name mismatch)
++ bugfix: subsampleCounts errors if no samples are found after subsampling
